--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
 <body>
   <div class="main-content">
     {{>header}}
-    <img class="portrait" src="img/me.jpg" >
+    <p>This site was created by greenlime. it uses data from mapbox and weatherAPI </p>
   </div>
 
   {{>footer}}
